css/main.css
body {
	margin: 0;
	padding: 0;
	font-family: Roboto, sans-serif;
}

header, section.not-found {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
}

nav {
	margin: 15px auto;
	width: 530px;
	float: right;
}

nav ul {
	margin: auto;
}

nav li {
	display: inline;
	margin: auto 20px;
}

nav li a:hover {
	color: #00ccff;
}

nav li a {
	font-size: 20px;
	font-weight: 300;
	color: #586069;
}

nav img {
	display: none;
}

/* Hide checkbox for menu */
input[type=checkbox] {
	display: none;
}

h2, h3, p, .not-found a {
	font-size: 40px;
	font-weight: 300;
	line-height: 25px;
}

h2, .skill, .portfolio-list, .my-contact, footer {
	text-align: center;
}

h3 {
	font-size: 20px;
}

a {
	text-decoration: none;
}

p {
	font-size: 16px;
}

ul {
	list-style-type: none;
	display: inline-block;
	padding: 0px;
	margin: auto;
	margin-left: -100px;
}

section, header {
	display: block;
	background-color: #fcfdfd;
	border-bottom: 1px solid #e1e4e8;
	overflow: hidden;
	word-wrap: break-word;
}

section.white {
	background-color: white;
}

.divider {
	width: 80px;
	height: 3px;
	background-color: #57c1b6ff;
	margin: -12px auto;
}

article.profile .divider {
	margin-bottom: 40px;
	margin-left: 40px;
}

.profile {
	float: left;
	width: 50%;
	text-align: center;
	margin: 140px auto;
}

.profile h2, .profile p, .portfolio-list p {
	text-align: left;
	padding: 0px 40px;
}

.profile img {
	width: 300px;
	height: 300px;
	border: 5px solid #e1e4e8;
	border-radius: 50%;
	margin-top: 50px;
}

.skill, .portfolio-list, .my-contact {
	margin-top: 100px;
}

.skill img {
	width: 140px;
	height: 140px; 
	padding: 0px 100px 120px 200px;
	margin-top: 20px;
}

.skill img.php {
	width: 170px;
	margin-top: 30px;
}

.portfolio-list li, .my-contact li {
	width: 480px;
	border: 1px solid #e1e4e8;
	border-radius: 6px;
	margin-bottom: 100px;
	margin-left: 100px;
	display: inline-block;
}

.portfolio-list img {
	border-top-right-radius: 6px;
	border-top-left-radius: 6px;
}

.portfolio-list img, .my-contact img {
	width: 100%;
	height: 380px;
}

.portfolio-list p {
	margin: 4px;
	padding: 10px;
}

.my-contact li {
	width: 300px;
}

.my-contact img {
	height: 80px;
	width: 	100px;
	margin-top: 25px;
}

.my-contact p {
	margin: 7px;
	margin-bottom: 25px;
}

footer {
	background-color: #fafbfc;
	padding: .1px;
	width: 100%;
	color: #586069;
}

footer p {
	font-size: 14px;
	line-height: 15px;
}

section.not-found {
	bottom: 0;
	padding-left: 250px;
	padding-top: 100px;
}

.not-found h1, .not-found h2 {
	font-size: 30px;
	margin: -10px 0px 25px 0px;
	text-align: left;
	line-height: 35px;
}

.not-found a {
	text-decoration: underline;
	color: black;
	font-size: 20px;
}

/* Clearfix */
.cf:before, .cf:after {
    content: " ";
    display: table; 
}

.cf:after {
    clear: both;
}

/* Responsive page for mobile device */
@media only screen and (max-width: 768px) {
	img {
		max-width: 100%;
		height: auto !important;
	}
	
	.profile {
		margin: 65px 0px;
	}
	
	.profile img {
		margin-bottom: -80px;
		margin-top: 30px;
	}
	
	.responsive-prof-pic {
		margin: auto 45px;
	}
	
	nav li, .skill ul, .skill ul li, .my-contact li, .portfolio-list li, nav li a {
		display: block;
	}
	
	nav ul {
		display: none;
	}
	
	nav li {
		margin: 20px 30px;
	}

	nav li a {
		text-align: center;
	}
	
	nav img {
		display: inline;
		margin: -5px 15px -3px 0px;
		width: 35px;
		float: right;
	}
	
	/* Show menu when invisible checkbox is checked */
	input[type=checkbox]:checked ~ ul.menu {
		display: block;
		margin-top: 37px;
		border-top: 1px solid #e1e4e8;
	}
	
	.skill ul, .profile, nav, .portfolio-list ul, .my-contact ul {
		width: 100%;
	}
	
	.skill img {
		width: 100px;
		padding: 0px 0px 150px 0px;
	}
	
	.skill img.php {
		margin-bottom: -50px;
	}
	
	.skill ul, .portfolio-list ul, .my-contact ul {
		margin: 0px;
	}
	
	.portfolio-list li, .my-contact li {
		margin: auto 20px;
		width: auto;
		margin-bottom: 100px;
	}
	
	.portfolio-list p {
		margin: 0px;
	}
	
	.my-contact li {
		margin: 0px 50px 100px 50px;
	}
	
	.my-contact img {
		height: 85px !important;
	}
	
	footer p {
		font-size: 13px;
		line-height: 10px;
	}
	
	section.not-found {
		padding-left: 15px;
		padding-right: 15px;
	}
}

